@@ -1,0 +1,2 @@
+*.pyc
+plone.portlet.static.egg-info/
