@@ -5,6 +5,10 @@ Changelog
 2.0.2 - Unreleased
 ------------------
 
+- Portlet title no longer required. If empty title, rendering of the portlet
+  header is skipped.
+  [rnix]
+
 - Add MANIFEST.in.
   [WouterVH]
 
